--- a/05.js.navbar/style.css
+++ b/05.js.navbar/style.css
@@ -4,11 +4,11 @@
   padding: 0;
 }
 header {
-  background-color: blue;
+  background-color: black;
 }
 body {
   font-family: sans-serif;
-  background-color: brown;
+  background-color: blue;
 }
 
 a {
@@ -42,7 +42,7 @@ a {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: black;
+  background-color: white;
 }
 
 .nav-link {
@@ -66,7 +66,7 @@ a {
 }
 
 .nav-link a:hover {
-  background-color: lightcoral;
+  background-color: rgb(128, 176, 240);
 }
 
 .hide {
@@ -84,7 +84,11 @@ a {
 #banner {
   height: 200vh;
 }
-
+.contact{
+  width: 120px;
+  border-radius: 80px;
+  background-color: aqua;
+}
 @media screen and (min-width: 767px) {
   .nav-link {
     display: block;
