--- a/finally.layihe/assets/style.css
+++ b/finally.layihe/assets/style.css
@@ -172,8 +172,287 @@ nav ul li a:hover {
   width: 100%;
 }
 
-/* --------------------------------PART-5--------------------------------- */
+/* --------------------------------PART-6--------------------------------- */
+#iconText {
+  background-image: url("./images/background2.jpg");
+}
+
 .iconText .productText4 i {
   font-size: 3rem;
   color: #1b745e;
+}
+.productText4 p {
+  margin: 15px 0;
+}
+/* --------------------------------PART-7--------------------------------- */
+.flowersPricing p {
+  font-weight: 400;
+  font-size: 18px;
+  color: #1b745e;
+  font-family: "Crimson Text", serif;
+}
+.flowersPricing h3 {
+  font-weight: 400;
+  font-size: 46px;
+  color: #0c5b47;
+  font-family: "Quicksand", sans-serif;
+}
+#flowersPricing {
+  margin-top: 80px;
+}
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 3rem;
+}
+.products .productDiv {
+  margin: 1%;
+  width: 30%;
+}
+.products .productDiv img {
+  width: 100%;
+}
+.search {
+  font-weight: bold;
+  height: 40px;
+  width: 300px;
+  font-family: "Crimson Text", serif;
+}
+.searchDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.iconParent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.productDiv {
+  position: relative;
+}
+.iParent {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: rgb(146, 5, 5);
+}
+.fav-count {
+  font-size: 1.2rem;
+}
+
+/* --------------------------------PART-8--------------------------------- */
+.pricingCards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 3rem;
+}
+.dollarText {
+  display: flex;
+}
+.cardDiv {
+  width: 33%;
+  background: #fef1e6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid green;
+}
+.cardDiv h2 {
+  margin-top: 30px;
+  font-size: 40px;
+  font-weight: 400;
+  font-family: "Crimson Text", serif;
+  color: #1b745e;
+}
+.cardDiv .per {
+  margin-top: 48px;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Crimson Text", serif;
+  color: #1b745e;
+}
+.cardDiv h3 {
+  font-size: 22px;
+  font-weight: 400;
+  font-family: "Quicksand", sans-serif;
+  color: #1b745e;
+}
+.cardDiv .lorem {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Quicksand", sans-serif;
+  color: #0c5b47;
+}
+.cardDiv button {
+  width: 160px;
+  height: 40px;
+  border: none;
+  color: #10634e;
+  background-color: #a7cec4;
+  cursor: pointer;
+  margin-bottom: 30px;
+  font-size: 16px;
+}
+.cardDiv button:hover {
+  background-color: #7db3a5;
+}
+.devoted {
+  font-weight: 400;
+  font-size: 18px;
+  font-family: "Crimson Text", serif;
+  color: #1b745e;
+}
+.events {
+  font-weight: 400;
+  font-size: 46px;
+  font-family: "Quicksand", sans-serif;
+  color: #0c5b47;
+}
+/* --------------------------------PART-9--------------------------------- */
+.teamSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#teamSection {
+  margin-top: 60px;
+}
+.contacts {
+  font-weight: 400;
+  font-size: 18px;
+  color: #1b745e;
+  font-family: "Crimson Text", serif;
+}
+.team {
+  font-weight: 400;
+  font-size: 46px;
+  color: #0c5b47;
+  font-family: "Quicksand", sans-serif;
+  margin-bottom: 40px;
+}
+.iconDiv i {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  background-color: white;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  padding: 10px;
+  color: green;
+  font-size: 1.6rem;
+  margin: 6px 0;
+}
+.teamCards {
+  position: relative;
+  width: 33%;
+}
+
+.iconDiv {
+  row-gap: 2rem;
+  position: absolute;
+  top: 20px;
+  left: 10px;
+}
+.teamCards img {
+  width: 100%;
+}
+.name {
+  margin-top: 30px;
+  font-weight: 400;
+  font-size: 22px;
+  color: #0c5b47;
+  font-family: "Quicksand", sans-serif;
+}
+.work {
+  font-weight: 400;
+  font-size: 16px;
+  color: #338873;
+  font-family: "Quicksand", italic;
+}
+
+/* --------------------------------PART-10--------------------------------- */
+.yourEmail {
+  outline: none;
+  border-bottom: 1px solid green;
+  height: 40px;
+  border: none;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 600;
+  padding: 0 20px;
+  background-color: transparent;
+}
+
+.inputBtn {
+  width: 500px;
+  border-bottom: 1px solid green;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.send {
+  width: 90px;
+  border: none;
+  height: 45px;
+  color: #0c5b47;
+}
+.send:hover{
+  background-color: #afcec5;
+}
+.logo {
+  width: 100px;
+  margin-bottom: 25px;
+}
+.logo img {
+  width: 100%;
+}
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2rem;
+}
+.footLeft {
+  width: 50%;
+}
+.footRight {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  flex-direction: column;
+}
+.navigation ul {
+  display: flex;
+  flex-direction: column;
+}
+.navigation h3 {
+  font-weight: 400;
+  font-size: 22px;
+  font-family: "Quicksand", sans-serif;
+  color: #0c5b47;
+}
+.navigation a {
+  font-weight: 400;
+  font-family: "Crimson Text", serif;
+  color: #0c5b47;
+  font-size: 18px;
+}
+footer {
+  padding: 70px 0;
+  margin-top: 40px;
+
+  background-color: #e0ecdc;
+}
+.fa-heart{
+  color: red;
 }
