--- a/09.Robotics/assets/css/style.css
+++ b/09.Robotics/assets/css/style.css
@@ -484,3 +484,29 @@ header {
   background-image: -webkit-linear-gradient(0deg, #828fff 0%, #d496ff 100%);
 }
 /* --------------------RESPONSIVE------PART-9-------------------- */
+/* --------------------API------PART--------------------- */
+.search{
+  margin: 50px 0;
+  width: 280px;
+  height: 40px;
+  padding: 10px 15px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  box-shadow: 7px 5px 6px blue;
+  outline: none;
+  border: none;
+  font-weight: 500;
+}
+::placeholder{
+  color: blue;
+}
+
+.products{
+  margin: 60px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
+.robotCard{
+  width: 350px;
+}
