--- a/05.blog-app/style.css
+++ b/05.blog-app/style.css
@@ -69,12 +69,17 @@ input {
 }
 .edit {
   font-size: 1.1rem;
-
+height: 40px;
   background-color: green;
   color: white;
   padding: 2px 14px;
   border-radius: 6px;
 }
+
+
 .card-text {
   color: rgb(165, 42, 83);
+}
+.cards{
+  width: 25%;
 }
