--- a/10.website-colorlip/assets/css/style.css
+++ b/10.website-colorlip/assets/css/style.css
@@ -142,23 +142,39 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px ;
+  margin: 30px;
   column-gap: 1rem;
 }
-.searchInput{
-    width: 400px;
-    height: 30px;
-    
-    border: 1px solid grey;
+.searchInput {
+  width: 400px;
+  height: 30px;
+
+  border: 1px solid grey;
 }
-::placeholder{
-    padding: 5px 15px;
+::placeholder {
+  padding: 5px 15px;
 }
-.sort{
-    height: 30px;
-    width: 120px;
-    border: 2px solid transparent;
-    background-color: blue;
-    color: white;
-    cursor: pointer;
+.sort {
+  height: 30px;
+  width: 120px;
+  border: 2px solid transparent;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+}
+.details-button {
+  height: 30px;
+  text-decoration: none;
+  color: black;
+  border: 2px solid black;
+  padding: 5px 20px;
+  margin-left: 150px;
+  width: 60px;
+}
+.details-button:hover {
+  background-color: black;
+  color: white;
+}
+.producct-image{
+    width: 100%;
 }
